@@ -210,8 +210,8 @@ AC_MSG_RESULT([$gecko])
 case "$gecko" in
 mozilla) min_version=1.7.9 flavour=mozilla ;;
 seamonkey) min_version=1.0 flavour=mozilla ;;
-*firefox) min_version=1.0.5 flavour=toolkit ;;
-*thunderbird) min_version=1.0.5 flavour=toolkit ;;
+*firefox) min_version=1.0 flavour=toolkit ;;
+*thunderbird) min_version=1.0 flavour=toolkit ;;
 esac
 
 MOZILLA=$gecko
@@ -581,7 +581,7 @@ EOF
 fi
 
 if test "x$have_python" != "xno"; then
-	PYGTK_REQUIRED=2.6.0
+	PYGTK_REQUIRED=2.7.1
 	GNOME_PYTHON_REQUIRED=2.6.0
 
 	PKG_CHECK_MODULES([PYGTK], [pygtk-2.0 >= $PYGTK_REQUIRED gnome-python-2.0 >= $GNOME_PYTHON_REQUIRED],
