@@ -4,13 +4,11 @@ static const char languages[][7] =
  * http://bugzilla.gnome.org/enter_bug.cgi?product=epiphany
  */
 "ab",
-"ab",
 "af",
 "af-na",
 "af-za",
 "am",
 "an",
-"ar",
 "ar",
 "ar-ae",
 "ar-bh",
@@ -45,12 +43,10 @@ static const char languages[][7] =
 "ay-bo",
 "ay-pe",
 "az",
-"az",
 "az-az",
 "az-ge",
 "az-ir",
 "az-tr",
-"bal",
 "bal",
 "bal-af",
 "bal-ir",
@@ -65,7 +61,6 @@ static const char languages[][7] =
 "bo-cn",
 "bo-in",
 "bo-np",
-"bs",
 "bs",
 "bs-cs",
 "bs-hr",
@@ -86,7 +81,6 @@ static const char languages[][7] =
 "da",
 "da-dk",
 "da-gl",
-"de",
 "de",
 "de-at",
 "de-be",
@@ -215,7 +209,6 @@ static const char languages[][7] =
 "fj",
 "fo",
 "fr",
-"fr",
 "fr-be",
 "fr-bf",
 "fr-bi",
@@ -263,10 +256,8 @@ static const char languages[][7] =
 "fy-de",
 "fy-nl",
 "ga",
-"ga",
 "gd",
 "gl",
-"gn",
 "gn",
 "gn-ar",
 "gn-bo",
@@ -283,15 +274,12 @@ static const char languages[][7] =
 "hi-in",
 "ho",
 "hr",
-"hr",
 "hr-ba",
 "hr-hr",
 "ht",
 "hu",
-"hu",
 "hu-cs",
 "hu-si",
-"hy",
 "hy",
 "ia",
 "hy-az",
@@ -300,7 +288,6 @@ static const char languages[][7] =
 "id",
 "ie",
 "is",
-"it",
 "it",
 "it-ch",
 "it-hr",
@@ -328,17 +315,14 @@ static const char languages[][7] =
 "ko-kr",
 "ks",
 "ku",
-"ku",
 "ku-iq",
 "ku-ir",
 "ku-tr",
 "kw",
 "ky",
-"ky",
 "la",
 "lb",
 "li",
-"ln",
 "ln",
 "lo",
 "lt",
@@ -392,7 +376,6 @@ static const char languages[][7] =
 "nr",
 "nso",
 "ny",
-"ny",
 "ny-mz",
 "ny-zm",
 "oc",
@@ -428,8 +411,6 @@ static const char languages[][7] =
 "rm",
 "rn",
 "ro",
-"ro",
-"ru",
 "ru",
 "ru-by",
 "ru-ge",
@@ -447,12 +428,10 @@ static const char languages[][7] =
 "sg",
 "si",
 "sk",
-"sk",
 "sl",
 "sm",
 "sm-as",
 "sm-ws",
-"so",
 "so",
 "so-dj",
 "so-et",
@@ -466,7 +445,6 @@ static const char languages[][7] =
 "sq-al",
 "sq-cs",
 "sq-mk",
-"sr",
 "sr",
 "sr-ba",
 "sr-cs",
@@ -498,7 +476,6 @@ static const char languages[][7] =
 "ti-et",
 "tig",
 "tk",
-"tk",
 "tk-af",
 "tk-ir",
 "tkl",
@@ -519,11 +496,9 @@ static const char languages[][7] =
 "ts",
 "tvl",
 "uk",
-"uk",
 "ur",
 "ur-in",
 "ur-pk",
-"uz",
 "uz",
 "ve",
 "vi",
