@@ -1,3 +1,13 @@
+2005-09-03  Christian Persch  <chpe@cvs.gnome.org>
+
+	* configure.ac:
+
+	Depend on pygtk 2.8. Fixes bug #314557.
+
+	* src/languages.h:
+
+	Remove duplicate entries.
+
 2005-09-01  Christian Persch  <chpe@cvs.gnome.org>
 
 	* src/ephy-toolbar-editor.c: (ephy_toolbar_editor_constructor):
